<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="7dp"
    app:cardMaxElevation="1dp"
    app:cardElevation="1.7dp"
    app:contentPadding="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="@color/colorLightGreen">

    <LinearLayout
        android:id="@+id/id_item_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/id_first_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginEnd="8dp"
            android:weightSum="5">

            <TextView
                android:id="@+id/id_bitkoin_name"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_gravity="left"
                android:text="@string/bitcoin"
                android:layout_weight="3"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <Space
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"/>
            <TextView
                android:id="@+id/id_bitkoin_symbol"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:text="@string/symbol"
                android:gravity="left"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/id_bitkoin_price"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/price"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:background="@color/colorDarkGreen"/>

        <TextView
            android:id="@+id/id_bitkoin_marketcap"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/market_cap"
            android:paddingLeft="4dp"
            android:paddingRight="4dp" />


        <TextView
            android:id="@+id/id_bitkoin_vol_24h"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/volume_24hrs"
            android:background="@color/colorDarkGreen"/>

        <TextView
            android:id="@+id/id_added_on"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="4dp"
            android:text="@string/added_on" />


        <TextView
            android:id="@+id/id_is_active"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:background="@color/colorDarkGreen"
            android:text="@string/active"/>

        <TextView
            android:id="@+id/id_percent_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:typeface="monospace"/>


    </LinearLayout>
</android.support.v7.widget.CardView>